[package]
name = "cs271_final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Define the binaries
[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "proxy"
path = "src/proxy/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
